<resources>
    <string name="app_name">LiquidBudget</string>
    <string name="zerodollars">0.00</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="homepage_hello">Hello %s!</string>
    <string name="homepage_date">Today is %s.</string>
    <string name="homepage_week_so_far">Your Week So Far:</string>
    <string name="homepage_rec_funds">Recommended Funds Left Today:</string>
    <string name="title_activity_spending_saving_page">SpendingSavingPage</string>
    <string name="spending_vs_saving">Spending vs. Saving</string>
    <string name="textview">TextView</string>
    <string name="SpendingPageTitle">Name</string>
    <string name="liquid_budget">Liquid Budget</string>
    <string name="prompt_email">Enter your email</string>
    <string name="prompt_password">Enter your password</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="action_sign_in">Log In</string>
    <string name="info_request">SIGN UP</string>
    <string name="name_input_hint">Enter your name</string>
    <string name="email_input_hint">Enter your email</string>
    <string name="login_button">LOG IN</string>
    <string name="signup_button">SIGN UP</string>
    <string name="welcome">Welcome!</string>
    <string name="login_failed">Invalid Credentials</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="prompt_DOB">Enter your birthday</string>
    <string name="Account">Account:\nPrivacy, security, edit profile</string>
    <string name="Notifications">Notifications:\nCustomize and configure push notifications</string>
    <string name="Banking">Banking Information:\nAdd a card, link a bank account</string>
    <string name="Help">Support:\nFAQ, contact us</string>
    <string name="Invite">Invite a Friend:\nInvite others to setup an account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="hello">Hello world!</string>
    <string name="addingIncome">Let\'s log a new income:</string>
    <string name="addingExpense">Let\'s log a new expense:</string>
    <string name="ExpenseName">Expense Name</string>
    <string name="IncomeName">Income Name</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="finish">Finish</string>
    <string name="budget">Budget</string>
    <string name="analysis">Analysis</string>
    <string name="categories">Categories</string>
    <string name="addingCategory">Let\'s create a new category:</string>
    <string name="quote1">wHy iS tHErE nO buTtOns doWn heRe???</string>
    <string name="quote2">hOw dO i gEt  OuT oF tHE tuToRIal???</string>
    <string name="catName">Category Name</string>
    <string name="type">Type</string>
    <string name="expAmount">Expected amount per month:</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="Change_pwd">Configure Account Privacy</string>
    <string name="Change_accountInfo">Edit Google Profile</string>
    <string name="Change_uid">Change Username</string>
    <string name="Enable_2FA">Enable Two-Factor Authentication</string>
    <string name="Link_Bank">Link a Bank Account</string>
    <string name="AddRemove_Card">Add or Remove a Credit/Debit Card</string>
    <string name="title_activity_expense_display">ExpenseDisplayActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="SignOut">Sign Out</string>
    <string name="dash">-</string>
    <string name="users_budget">%s"'s Budget"</string>
    <string name="users_analysis">%s"'s Financial Analysis"</string>
    <string name="first_alert">My First Dialog</string>
    <string name="title_activity_tutorial_welcome">TutorialWelcome</string>
    <string name="welcome_text">WELCOME</string>
    <string name="app_description">LiquidBudget is a budgeting app designed for users with fluid finances.</string>
    <string name="get_started">Lets get started.</string>
    <string name="Tutorial_Intro">Welcome to LiquidBudget. Our database shows that you have not completed our tutorial. Would you like to complete it now? </string>
</resources>