<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".settings.AccountActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Account"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary">
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/changeUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:text="@string/Change_uid"
        android:textSize="18sp"
        android:gravity="left|center_vertical"
        />

    <Button
        android:id="@+id/changeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:text="@string/Change_email"
        android:textSize="18sp"
        android:gravity="left|center_vertical"
        />

    <Button
        android:id="@+id/changePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:text="@string/Change_pwd"
        android:textSize="18sp"
        android:gravity="left|center_vertical"
        />

    <Button
        android:id="@+id/enable2FA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:text="@string/Enable_2FA"
        android:textSize="18sp"
        android:gravity="left|center_vertical"
        />
</LinearLayout>