<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Settings"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10sp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:tint="@color/colorPrimary"
                    android:src="@drawable/ic_baseline_person_24">
                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/emailEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@android:color/black"/>

                </LinearLayout>
                
            </LinearLayout>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#939393"/>

            <Button
                android:id="@+id/goToAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:background="@android:color/transparent"
                android:text="@string/Account"
                android:textSize="18sp"
                android:gravity="left|center_vertical"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="10dp"
            />

            <Button
                android:id="@+id/goToNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:background="@android:color/transparent"
                android:text="@string/Notifications"
                android:textSize="18sp"
                android:gravity="left|center_vertical"
                android:drawableLeft="@drawable/ic_baseline_notifications_24"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="10dp"
                />

            <Button
                android:id="@+id/goToBanking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:background="@android:color/transparent"
                android:text="@string/Banking"
                android:textSize="18sp"
                android:gravity="left|center_vertical"
                android:drawableLeft="@drawable/ic_baseline_account_balance_24"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="10dp"
                />

            <Button
                android:id="@+id/goToHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:background="@android:color/transparent"
                android:text="@string/Help"
                android:textSize="18sp"
                android:gravity="left|center_vertical"
                android:drawableLeft="@drawable/ic_baseline_help_24"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="10dp"
                />

            <Button
                android:id="@+id/goToInvite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:background="@android:color/transparent"
                android:text="@string/Invite"
                android:textSize="18sp"
                android:gravity="left|center_vertical"
                android:drawableLeft="@drawable/ic_baseline_group_add_24"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="10dp"
                />

            <Button
                android:id="@+id/signOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:background="@android:color/transparent"
                android:text="@string/SignOut"
                android:textSize="18sp"
                android:gravity="left|center_vertical"
                android:textColor="@android:color/holo_red_dark"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>